@@ -99,15 +99,9 @@ const std::array<NetworkAction, NETWORK_PERMISSION_COUNT> NetworkActions::Action
     NetworkAction{
         STR_ACTION_BUILD_RIDE,
         "PERMISSION_BUILD_RIDE",
-        {
-            GAME_COMMAND_PLACE_TRACK,
-            GAME_COMMAND_REMOVE_TRACK,
-            GAME_COMMAND_SET_MAZE_TRACK,
-            GAME_COMMAND_PLACE_TRACK_DESIGN,
-            GAME_COMMAND_PLACE_MAZE_DESIGN,
-            GAME_COMMAND_PLACE_RIDE_ENTRANCE_OR_EXIT,
-            GAME_COMMAND_REMOVE_RIDE_ENTRANCE_OR_EXIT,
-        },
+        { GAME_COMMAND_PLACE_TRACK, GAME_COMMAND_REMOVE_TRACK, GAME_COMMAND_SET_MAZE_TRACK, GAME_COMMAND_PLACE_TRACK_DESIGN,
+          GAME_COMMAND_PLACE_MAZE_DESIGN, GAME_COMMAND_PLACE_RIDE_ENTRANCE_OR_EXIT, GAME_COMMAND_REMOVE_RIDE_ENTRANCE_OR_EXIT,
+          GAME_COMMAND_RIDE_ABORT_CONSTRUCTION },
     },
     NetworkAction{
         STR_ACTION_RIDE_PROPERTIES,
